docs/themes/thxvscode/assets/scss/includes/_docs.scss
/*---- Docs -----*/

#docs-subnavbar > div:first-child.connect-widget {
	margin-top: 0; // Gets rid of top margin when it is the first thing in the docs-subnavbar, to be aligned with left nav.
}

.docs {
	.body {
		line-height: 1.6;

		h2 {
			padding-top: 70px; // Need to add padding so that header jumps (links and right nav) display below sticky nav bar
			margin-top: -50px;
		}

		h3 {
			padding-top: 70px; // Need to add padding so that header jumps (links and right nav) display below sticky nav bar
			margin-top: -50px;
		}

		h4 {
			margin-top: 30px;
		}
	}

	video {
		margin-top: 1.5rem;
		margin-bottom: 2.5rem;
		width: 100%;
		max-width: 100%;
	}

	iframe {
		width: 100%;
		max-width: 100%;
		height: 400px;
	}

	h1 {
		margin-bottom: 15px;
	}

	h2 {
		margin-top: 30px;
		margin-bottom: 10px;
	}

	.body h4 {
		margin-top: 30px;
	}

	img {
		max-width: 100%;
		display: block;
	}

	.keybinding {
		font-family: Menlo, Monaco, Consolas, "Courier New", monospace;
		padding: 2px 4px;
		font-size: 90%;
		color: $blue;
		background-color: #f4f2f9;
		@include border-radius(4px);

		&.osx {
			font-family: -apple-system, BlinkMacSystemFont, "Helvetica Neue", Arial, sans-serif;
		}
	}

	#confirmation {
		padding: 10px 15px;
		display: none;
		text-align: center;
		background-color: #f1f8ee;
		border-color: #f1f8ee;

		h2 {
			margin-top: 0;
			margin-bottom: 5px;
			font-size: 2.8rem;
		}

		p {
			margin-top: 0;
			font-size: 0.8em;
		}
	}

	.hash-link {
		margin: 1%;

		&.transparent {
			color: transparent;
		}
	}
}

.docs-navbar-container {
	position: -webkit-sticky;
	position: sticky;
	-ms-overflow-style: none;
	top: 70px !important;
}
@media (max-width: $screen-md) {
	.docs-navbar-container {
		position: -webkit-sticky;
		position: sticky;
		-ms-overflow-style: none;
		top: 20px !important;
	}
}

#docs-navbar {
	// Prevent Firefox Orange scrollbar: https://stackoverflow.com/a/25904563/1780148
	overflow: -moz-scrollbars-none;

	overflow-y: auto;
}
#docs-navbar > .nav {
	overflow: hidden;
}
#docs-navbar::-webkit-scrollbar {
	width: 0 !important;
}
#docs-subnavbar.affix {
	position: static;
	top: 0;
}
#docs-subnavbar.affix-bottom {
	position: relative;
}

#docs-navbar {
	padding: 15px 0;
	display: none;
}

#docs-subnavbar {
	padding-top: 15px;
	padding-bottom: 15px;
}

.docs-nav h4,
#docs-subnavbar h4 {
	margin-top: 0;
}

#docs-navbar h4 {
	padding-left: 15px;
}

#docs-subnavbar h4 {
	padding-left: 10px;
}

#docs-navbar > .nav a {
	padding-left: 10px;
}

#docs-navbar ul {
	list-style: none;
	padding: 0;
}

#docs-navbar .nav {
	li a,
	li div {
		border-left: 1px solid $gray;
		display: block;

		&:hover {
			background: none;
			color: $text-color;
			text-decoration: none !important;
			border-color: $link-color;
		}

		&:focus {
			background: none;
		}
	}

	/* Increased padding for API category/group items */
	.api-item-kind {
		padding: 5px 35px;
	}

	> li > a {
		padding: 8px 15px;
		font-size: 14px;
	}

	> li li > a {
		padding: 5px 25px;
		position: relative;


		/* Further increased padding for specific API endpoints */
		&.leaf-node {
			padding: 5px 45px;
		}
	}

	.docs-home {
		padding-bottom: 16px;
	}

	> li > .area {
		@include h4();
	}

	.panel {
		/* Have to reset panel for accordion effect to work */
		margin-bottom: inherit;
		background-color: inherit;
		border: inherit;
		@include border-radius(inherit);
		-webkit-box-shadow: inherit;
		box-shadow: inherit;

		> a {
			margin-right: 40px;
		}

		&.expanded, &.collapsed {
			a, div {
				&:hover {
					background-size: 24px;
					background-repeat: no-repeat;
					background-position: 110px 5px;
				}
			}
		}
	
		&.expanded {
			a, div {
				border-color: $link-color;
	
				&:hover {
					background-image: url("/expand-up.svg");
				}
			}
		}
	
		&.collapsed {
			a, div {
				&:hover {
					background-image: url("/expand-down.svg");
				}
			}
		}
	}

	.collapsing {
		@include transition-duration(0.25s);
	}
}

#docs-navbar .nav li a,
#docs-subnavbar .nav li a {
	color: #707070;
	&:focus {
		background-color: transparent;
	}
}

#docs-subnavbar .nav li a {
	padding: 5px 10px;
}
/* ... */

